--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -376,6 +376,7 @@
     </Compile>
     <Compile Include="TransAPI\EzTransAPI.cs" />
     <Compile Include="TransAPI\GoogleBasicTranslateAPI.cs" />
+    <Compile Include="TransAPI\PapagoWebTranslateAPI.cs" />
     <Compile Include="TransForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -620,6 +621,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Web.WebView2">
       <Version>1.0.2045.28</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="RestSharp">
       <Version>106.12.0</Version>
