--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.GenAI" Version="0.3.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2045.28" />
     <PackageReference Include="Python.Included" Version="3.11.6" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
